docs/04-Android/older/2.3.0/player/player-api/player-api/com.deezer.sdk.player.model/-deezer-playable/index.md
//[player-api](../../../index.md)/[com.deezer.sdk.player.model](../index.md)/[DeezerPlayable](index.md)

# DeezerPlayable

[androidJvm]\
interface [DeezerPlayable](index.md)

Minimal representation of a content that can be played by the **_Deezer SDK_**

## Properties

| Name        | Summary                                                                                                                                                          |
| ----------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [id](id.md) | [androidJvm]<br/>abstract val [id](id.md): [String](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)<br/>Unique identifier of the content |

## Inheritors

| Name                                                                                |
| ----------------------------------------------------------------------------------- |
| [InfiniteTrackListDeezerPlayable](../-infinite-track-list-deezer-playable/index.md) |
| [TrackDeezerPlayable](../-track-deezer-playable/index.md)                           |
| [TrackListDeezerPlayable](../-track-list-deezer-playable/index.md)                  |
