docs/04-Android/older/3.1.0/player/player-api/player-api/com.deezer.sdk.player.model/-deezer-playable/index.md
//[player-api](../../../index.md)/[com.deezer.sdk.player.model](../index.md)/[DeezerPlayable](index.md)

# DeezerPlayable

[androidJvm]\
interface [DeezerPlayable](index.md)

Minimal representation of a content that can be played by the **_Deezer SDK_**

## Properties

| Name        | Summary                                                                                                                                                          |
| ----------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [id](id.md) | [androidJvm]<br/>abstract val [id](id.md): [String](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)<br/>Unique identifier of the content |

## Inheritors

| Name                                                                                |
| ----------------------------------------------------------------------------------- |
| [AlbumDeezerPlayable](../-album-deezer-playable/index.md)                           |
| [ArtistTopTracksDeezerPlayable](../-artist-top-tracks-deezer-playable/index.md)     |
| [FavoriteTracksDeezerPlayable](../-favorite-tracks-deezer-playable/index.md)        |
| [FlowConfigDeezerPlayable](../-flow-config-deezer-playable/index.md)                |
| [FlowDeezerPlayable](../-flow-deezer-playable/index.md)                             |
| [InfiniteTrackListDeezerPlayable](../-infinite-track-list-deezer-playable/index.md) |
| [PlaylistDeezerPlayable](../-playlist-deezer-playable/index.md)                     |
| [SingleDeezerPlayable](../-single-deezer-playable/index.md)                         |
| [SmartTrackListDeezerPlayable](../-smart-track-list-deezer-playable/index.md)       |
| [TrackListDeezerPlayable](../-track-list-deezer-playable/index.md)                  |
